--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon --legacy-watch index.js",
-    "test": "\"echo \"Error: no test specified\\\" && exit 1\""
+    "test": "\"echo \"Error: no test specified\\\" && exit 1\"",
+    "build:ui": "rm -rf dist && cd ../FullStackOpen/Part2/phonebook && npm run build && cp -r dist ../../../FSO_P3_backend",
+    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push"
   },
   "repository": {
     "type": "git",
