--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "nodemon --legacy-watch index.js",
     "test": "\"echo \"Error: no test specified\\\" && exit 1\"",
     "build:ui": "rm -rf dist && cd ../FullStackOpen/Part2/phonebook && npm run build && cp -r dist ../../../FSO_P3_backend",
-    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push"
+    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && git push",
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
@@ -26,5 +27,11 @@
     "express": "^5.1.0",
     "mongoose": "^8.17.2",
     "morgan": "^1.10.1"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.33.0",
+    "@stylistic/eslint-plugin-js": "^4.4.1",
+    "eslint": "^9.33.0",
+    "globals": "^16.3.0"
   }
 }
